# todo_fastapi_ddd

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test-integration.yml  pyproject.toml
app/: main.py
app/core/shared/application/: utils.py
app/core/shared/application/schemas/: response.py
app/core/shared/domain/: entity.py
app/core/shared/infrastructure/database/: database.py  guid.py
app/core/shared/security/: dependecies.py  interfaces.py  jwt.py  password_hasher.py
app/core/task/api/routes/: task_routes.py
app/core/task/api/schemas/: task_schemas.py
app/core/task/application/factories/: task_use_case_factory.py
app/core/task/application/use_cases/: create_task_use_case.py  delete_task_use_case.py  edit_task_use_case.py  list_all_tasks_by_user_use_case.py  list_task_by_id_use_case.py  search_tasks_use_case.py
app/core/task/domain/: task.py  task_repository.py
app/core/task/domain/commands/: create_task_command.py  delete_task_command.py  edit_task_command.py
app/core/task/domain/events/: task_created_event.py  task_deleted_event.py  task_edited_event.py
app/core/task/infra/models/: task_model.py
app/core/task/infra/repositories/: sqlalchemy_task_repository.py
app/core/tasks/domain/: exceptions.py
app/core/user/api/routes/: user_routes.py
app/core/user/api/schemas/: user_schemas.py
app/core/user/application/factories/: use_case_factory.py
app/core/user/application/use_cases/: create_user_use_case.py  login_user_use_case.py
app/core/user/domain/: exceptions.py  user.py  user_repository.py
app/core/user/domain/commands/: create_user_command.py  login_user_command.py
app/core/user/domain/events/: user_created_event.py  user_loggedin_event.py
app/core/user/infra/models/: user_model.py
app/core/user/infra/repositories/: sqlalchemy_user_repository.py
app/core/user/infrastructure/models/: user_model.py
app/core/user/infrastructure/repositories/: sqlalchemy_user_repository.py
migrations/: env.py
migrations/versions/: 1214f964159d_create_task_table.py  3ae6239bf05e_add_created_at.py  6815b03f3ba8_user.py  7f7d3390173b_create_user_table.py  854246281184_add_updated_at_field.py  b1a69695f080_add_task_to_user.py  b7d047390ce6_create_users_table.py  c0f612e3f94c_task_table.py  d61fa660aa7b_add_username.py
tests/: conftest.py  helpers.py  root_test.py
tests/integration/core/task/api/: test_task_routes.py
tests/integration/core/task/infra/repositories/: test_sqlalchemy_task_repository.py
tests/integration/core/user/api/routes/: test_user_routes.py
tests/integration/core/user/infra/repositories/: test_sqlalchemy_user_repository.py
