[tool.poetry]
name = "todo-fastapi"
version = "0.1.0"
description = ""
authors = ["Leandro Koshoji <leandro.koshoji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
fastapi = "^0.111.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
uvicorn = "^0.30.1"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pytest-watch = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.1"
httpx = "^0.27.0"
debugpy = "^1.8.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
markers = ["unit: unit tests", "integration: integration tests"]

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev app/main.py'
pre_test = 'task lint'
test_unit = "pytest -m unit -s -x --cov=app -vv"
test_integration = "pytest -m integration -s -x --cov=app -vv"
test_watch_integration = "ptw -- -m integration -s --cov=app -vv"
post_test = 'coverage html'
docker_dev_exec = 'docker-compose -f docker-compose.dev.yml exec app sh'
docker_dev_up = 'docker-compose -f docker-compose.dev.yml up --build'
docker_dev_down = 'docker-compose -f docker-compose.dev.yml down'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
